--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
+	<!-- fuentes de google -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Signika">
+	
     <!-- Custom styles for this template -->
     <link href="remo.css" rel="stylesheet">
+	
+	
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -52,22 +56,30 @@
                 <li class="active"><a href="#">Inicio</a></li>
                 <li><a href="#about">Presentación</a></li>
 				<li><a href="entrenamiento.html">Entrenamiento</a></li>
-				<li><a href="#about">Técnica</a></li>
-				<li><a href="#about">Embarcaciones</a></li>
-				<li><a href="#contact">Contacto</a></li>
+				<li><a href="tecnica.html">Técnica</a></li>
+				<li><a href="embarcaciones.html">Embarcaciones</a></li>
+				<li><a href="contacto.html">Contacto</a></li>
                 <li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actividades<span class="caret"></span></a>
                   <ul class="dropdown-menu">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
+                    <li><a href="#">Salidas</a></li>
+                    <li><a href="#">Competiciones</a></li>
                     <li role="separator" class="divider"></li>
-                    <li class="dropdown-header">Nav header</li>
-                    <li><a href="#">Separated link</a></li>
-                    <li><a href="#">One more separated link</a></li>
+                    <li class="dropdown-header">Clinics</li>
+                    <li><a href="#">Concentraciones</a></li>
+                    <li><a href="#">Campamentos</a></li>
                   </ul>
                 </li>
               </ul>
+			  <div id="sociales">
+				  <a href="http://facebook.com"><img src="imagen/pixel.gif" /></a>
+				  <a href="http://twitter.com"><img src="imagen/pixel.gif" /></a>
+				  <a href="http://pinterest.com"><img src="imagen/pixel.gif" /></a>
+				  <a href="https://plus.google.com/"><img src="imagen/pixel.gif" /></a>
+				  <a href="https://vimeo.com"><img src="imagen/pixel.gif" /></a>
+				  <a href="http://instagram.com"><img src="imagen/pixel.gif" /></a>
+				  <a href="http://youtube.com"><img src="imagen/pixel.gif" /></a>
+			  </div>
             </div>
           </div>
         </nav>
@@ -92,7 +104,7 @@
             <div class="carousel-caption">
               <h1>Equipo</h1>
               <p>El remo es un deporte de equipo, donde todos son igual de imprescindibles y donde el compañerismo es imprescindible para un buen resultado.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">¡Ven a remar!</a></p>
+              <p><a class="btn btn-lg btn-primary" href="entrenamiento.html" role="button">¡Ven a remar!</a></p>
             </div>
           </div>
         </div>
@@ -102,7 +114,7 @@
             <div class="carousel-caption">
               <h1>Fuerza y técnica.</h1>
               <p>Combinadas dan al remero la posibilidad de lograr grandes éxitos o simplemente disfrutar rodeado de la naturaleza.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Más información</a></p>
+              <p><a class="btn btn-lg btn-primary" href="tecnica.html" role="button">Más información</a></p>
             </div>
           </div>
         </div>
@@ -112,7 +124,7 @@
             <div class="carousel-caption">
               <h1>Coordinación</h1>
               <p>Es muy importante cuando remamos en equipo, todos a una para obtener un rendimiento óptimo en cada serie.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <p><a class="btn btn-lg btn-primary" href="embarcaciones.html" role="button">Browse gallery</a></p>
             </div>
           </div>
         </div>
@@ -140,19 +152,19 @@
 		  <img class="img-circle espacio-superior" src="imagen/Samuel_and_Saidye_Bronfman_Archaeology_WingDSCN4960-cuadrada.JPG" alt="Generic placeholder image" width="140" height="140">
 		  <h2>Entrenamiento</h2>
           <p>Las sesiones de entramiento son fundamentales para adquirir la técnica y la forma física necesaria para la práctica de cualquier deporte. El remo exige un ejercicio regular y unas competencias depuradas para aprovechar al máximo la condición del remero. </p>
-          <p><a class="btn btn-default" href="#" role="button">Más... &raquo;</a></p>
+          <p><a class="btn btn-default" href="entrenamiento.html" role="button">Más... &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle espacio-superior" src="imagen/nuria-dominguez-cuadrada.jpg" alt="Generic placeholder image" width="140" height="140">
           <h2>Técnica</h2>
           <p>Para adquirir la técnica adecuada es una gran ayuda aprender de los mejores. A través de explicaciones vídeos y las observaciones de los entrenadores podremos llegar a remar correctamente. ¿Quién dijo que no había que trabajar?</p>
-          <p><a class="btn btn-default" href="#" role="button">Más... &raquo;</a></p>
+          <p><a class="btn btn-default" href="tecnica.html" role="button">Más... &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <img class="img-circle espacio-superior" src="imagen/IstanbulNavalMuseum09cuadrada.JPG" alt="Generic placeholder image" width="140" height="140">
           <h2>Embarcaciones</h2>
           <p>Conocer el material que utilizamos en nuestras sesiones de entrenamiento y en las competiciones pude sacarnos de un apuro. Debemos saber con que material trabajamos y como resolver las pequeñas incidencias que pueden ocurrir en una regata.</p>
-          <p><a class="btn btn-default" href="#" role="button">Más... &raquo;</a></p>
+          <p><a class="btn btn-default" href="embarcaciones.html" role="button">Más... &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row -->
 
